2006-03-06    <wolfgang.mueller@wiai.uni-bamberg.de>

	* libGIFTAcInvertedFile/cc/CAcIFFileSystem.cc(DIDToFeatureList): took 
	out assertion that checks for presence of ADI (additional document 
	information). This is dirty and should be temporal.

2006-03-03    <wolfgang.mueller@wiai.uni-bamberg.de>

	* libGIFTAcInvertedFile/include/CAcIFFileSystem.h (mURL2FTS): 
	made mURL2FTS mutable in order to be able to add unknown images
	to the collection.

	* libGIFTAcInvertedFile/cc/CAcIFFileSystem.cc (URLToFeatureList): 
	Fixed embarrassing typos.

2006-03-02    <wolfgang.mueller@wiai.uni-bamberg.de>

	* libGIFTAcURL2FTS/include/CAcURL2FTS.h (addImage):  method added.
	Adds one image to the URL2FTS file list during runtime.
	Warning: the underlying URL2FTS file is not changed, so stopping 
	the GIFT you lose all changes.

	* libGIFTAcInvertedFile/cc/CAcIFFileSystem.cc (URLToFeatureList): 
	partial fix to the adding images problem. 
	features of external images hould now be extracted only once.

2006-02-28    <wolfgang.mueller@wiai.uni-bamberg.de>

	* scripts/perl/gift-add-collection.pre-pl: "Features not extracted
	file exists". Fixed behavior of what happens when a collection
	is re-added.

	* libGIFTAcInvertedFile/cc/Makefile.am (libGIFTAcInvertedFile_la_LDFLAGS): 
	* libGIFTQuInvertedFile/cc/Makefile.am (libGIFTQuInvertedFile_la_LDFLAGS): 
	* libGIFTAcDistanceMatrix/cc/Makefile.am (libGIFTAcDistanceMatrix_la_LDFLAGS): 
	DIRTY HACK 
	Apparently current libtool forbids linking to not-yet-installed 
	libraries. Now hacked into it the exact path where libraries (.a)
	are supposed to be.

	WARNING MIGHT BREAK WITH FUTURE LIBTOOL
	WARNING MIGHT BE DIFFICULT TO USE WITH CYGWIN

2005-03-30    <wolfgang.mueller@wiai.uni-bamberg.de>

	* libGIFTAcPerl/cc/CAcPerl.cc: 
	* libGIFTAcPerl/include/CAcPerl.h: 
	long int -> TID

	
2005-03-24    <wolfgang.mueller@wiai.uni-bamberg.de>

	* libMRML/cc/CAccessorAdminCollection.cc: 
	* libMRML/cc/CAccessorAdminCollection.pre-cc: 